# recipes

./: .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO  conftest.py  dashi.txt  docker-compose.yml  package.json  pyproject.toml  recipes.code-workspace  sample_recipes.yaml  setup.sh
.github/workflows/: ci.yml
auth_tests/: test_jwt.py
backend/: assistant.py  config.py  main.py  sample_query.sql.s
backend/auth/: dependencies.py  jwt_handler.py  models.py  oauth.py  repository.py  routes.py
backend/prompts/: __init__.py  prompt.txt
backend/static/: app.js  index.html  settings.html  settings.js  styles.css
backend/storage/: __init__.py  conversations.py  dependencies.py
backend/utils/: tokens.py
bugs/: 001_bad_yaml_maybe.txt
database/initialization/: 01_create_user_and_db.sql  02_create_tables.sql
samples/: recipe_structure.yaml  recipes.json  recipes.yaml
scripts/: setup-dev.sh
tests/: __init__.py  conftest.py  conftest_old.py  pytest_plugins.py  test_assistant.py  test_auth.py  test_auth_isolated.py  test_config.py  test_isolated_mocks.py
